--- a/MK-Proweb/Pertemuan-1/index.html
+++ b/MK-Proweb/Pertemuan-1/index.html
@@ -233,9 +233,9 @@
                         <p>Browser (client) mengirim permintaan (request) ke server, lalu server mengirim respons. Proses ini dapat melibatkan pertukaran data JSON melalui RESTful API. Frontend dan Backend berkomunikasi menggunakan endpoint tertentu yang disepakati.</p>
                     </div>
                     <div class="illustration-container">
-                        <img class="illustration-image fragment fade-up" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="Frontend">
+                        <img class="illustration-image fragment fade-up" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="Frontend" style="width: 50px; height: auto;">
                         <i class="fas fa-arrows-left-right fa-2x" style="color:#fff;"></i>
-                        <img class="illustration-image fragment fade-up" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Backend">
+                        <img class="illustration-image fragment fade-up" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Backend" style="width: 50px; height: auto;">
                     </div>
                 </section>
             </section>
@@ -325,8 +325,6 @@ public function getPengguna() {
                     <ul class="feature-list">
                         <li class="fragment fade-up">Pelajari struktur file proyek web (frontend & backend) dengan lebih mendalam.</li>
                         <li class="fragment fade-up">Pahami konsep <em>modularisasi</em> dalam frontend (misalnya pada React.js) dan <em>laravel modules</em> pada backend.</li>
-                        <li class="fragment fade-up">Gunakan alat bantu seperti Postman atau Insomnia untuk mengetes endpoint API.</li>
-                        <li class="fragment fade-up">Perhatikan keamanan dan validasi input saat mengembangkan backend (misal dengan middleware Laravel).</li>
                         <li class="fragment fade-up">Baca dokumentasi resmi masing-masing teknologi secara rutin agar tetap up-to-date.</li>
                     </ul>
                 </div>
