--- a/MK-Proweb/index.html
+++ b/MK-Proweb/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MK Pemrograman Web</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto px-4 py-8">
@@ -21,7 +23,10 @@
             <!-- Pertemuan 1 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                 <div class="p-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-2">Pertemuan 1</h2>
+                    <div class="flex justify-between items-center mb-4">
+                        <h2 class="text-xl font-bold text-gray-800">Pertemuan 1</h2>
+                        <i class="fas fa-code text-blue-500 text-2xl"></i>
+                    </div>
                     <p class="text-gray-600 mb-4">Pengenalan Web Development</p>
                     <a href="Pertemuan-1/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                 </div>
@@ -30,34 +35,46 @@
             <!-- Pertemuan 2 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                 <div class="p-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-2">Pertemuan 2</h2>
+                    <div class="flex justify-between items-center mb-4">
+                        <h2 class="text-xl font-bold text-gray-800">Pertemuan 2</h2>
+                        <i class="fas fa-laptop-code text-blue-500 text-2xl"></i>
+                    </div>
                     <p class="text-gray-600 mb-4">Frontend Development</p>
                     <a href="Pertemuan-2/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                 </div>
             </div>
 
-            <!-- Pertemuan 3 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                <div class="p-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-2">Pertemuan 3</h2>
-                    <p class="text-gray-600 mb-4">HTML dan CSS Dasar</p>
-                    <a href="Pertemuan-3/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
+           <!-- Pertemuan 3 -->
+           <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <div class="p-6">
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-xl font-bold text-gray-800">Pertemuan 3</h2>
+                    <i class="fas fa-html5 text-orange-500 text-2xl"></i>
                 </div>
+                <p class="text-gray-600 mb-4">HTML dan CSS Dasar</p>
+                <a href="Pertemuan-3/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
+            </div>
             </div>
 
-            <!-- Pertemuan 4 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+             <!-- Pertemuan 4 -->
+             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                 <div class="p-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-2">Pertemuan 4</h2>
+                    <div class="flex justify-between items-center mb-4">
+                        <h2 class="text-xl font-bold text-gray-800">Pertemuan 4</h2>
+                        <i class="fab fa-js text-yellow-500 text-2xl"></i>
+                    </div>
                     <p class="text-gray-600 mb-4">JavaScript Dasar</p>
                     <a href="Pertemuan-4/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                 </div>
             </div>
 
-            <!-- Pertemuan 5 -->
-            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+             <!-- Pertemuan 5 -->
+             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                 <div class="p-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-2">Pertemuan 5</h2>
+                    <div class="flex justify-between items-center mb-4">
+                        <h2 class="text-xl font-bold text-gray-800">Pertemuan 5</h2>
+                        <i class="fas fa-database text-green-500 text-2xl"></i>
+                    </div>
                     <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
                     <a href="Pertemuan-5/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                 </div>
