--- a/MK-Proweb/index.html
+++ b/MK-Proweb/index.html
@@ -40,7 +40,7 @@
                         <h2 class="text-xl font-bold text-gray-800">Pertemuan 2</h2>
                         <i class="fas fa-laptop-code text-blue-500 text-2xl"></i>
                     </div>
-                    <p class="text-gray-600 mb-4">Frontend Development</p>
+                    <p class="text-gray-600 mb-4">Dasar-dasar React.js & Laravel</p>
                     <a href="Pertemuan-2/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 3</h2>
                     <i class="fas fa-html5 text-orange-500 text-2xl"></i>
                 </div>
-                <p class="text-gray-600 mb-4">HTML dan CSS Dasar</p>
+                <p class="text-gray-600 mb-4">State Management dan Database</p>
                 <a href="Pertemuan-3/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
             </div>
             </div>
@@ -64,7 +64,7 @@
                         <h2 class="text-xl font-bold text-gray-800">Pertemuan 4</h2>
                         <i class="fab fa-js text-yellow-500 text-2xl"></i>
                     </div>
-                    <p class="text-gray-600 mb-4">JavaScript Dasar</p>
+                    <p class="text-gray-600 mb-4">API & Integrasi</p>
                     <a href="Pertemuan-4/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                         <h2 class="text-xl font-bold text-gray-800">Pertemuan 5</h2>
                         <i class="fas fa-database text-green-500 text-2xl"></i>
                     </div>
-                    <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                    <p class="text-gray-600 mb-4">Routing dan Dynamic Data</p>
                     <a href="Pertemuan-5/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 6</h2>
                                     <i class="fas fa-network-wired text-purple-500 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Autentikasi (Login & Register)</p>
                                 <a href="Pertemuan-6/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 7</h2>
                                     <i class="fas fa-cloud text-blue-400 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Integrasi Autentikasi</p>
                                 <a href="Pertemuan-7/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 8</h2>
                                     <i class="fas fa-cogs text-gray-700 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">UTS</p>
                                 <a href="Pertemuan-8/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 9</h2>
                                     <i class="fas fa-server text-indigo-500 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Advanced React.js & Laravel</p>
                                 <a href="Pertemuan-9/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 10</h2>
                                     <i class="fas fa-digital-tachograph text-teal-500 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Upload File dan Validasi</p>
                                 <a href="Pertemuan-10/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -148,7 +148,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 11</h2>
                                     <i class="fas fa-robot text-gray-500 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Realtime Data dan WebSocket</p>
                                 <a href="Pertemuan-11/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 12</h2>
                                     <i class="fas fa-terminal text-black text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Optimisasi dan Deployment</p>
                                 <a href="Pertemuan-12/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 13</h2>
                                     <i class="fas fa-mobile-alt text-green-500 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Kolaborasi Tim</p>
                                 <a href="Pertemuan-13/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 14</h2>
                                     <i class="fas fa-desktop text-blue-600 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Testing dan Debugging</p>
                                 <a href="Pertemuan-14/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 15</h2>
                                     <i class="fas fa-globe text-gray-800 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Penyelesaian Proyek Besar</p>
                                 <a href="Pertemuan-15/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 16</h2>
                                     <i class="fas fa-project-diagram text-red-500 text-2xl"></i>
                                 </div>
-                                <p class="text-gray-600 mb-4">Pemrograman Berbasis DOM</p>
+                                <p class="text-gray-600 mb-4">Tugas Besar</p>
                                 <a href="Pertemuan-16/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
                             </div>
                         </div>
